@@ -2,6 +2,9 @@ mysql-workbench (5.2.38+dfsg-2) unstable; urgency=low
 
   * patch to fix FTBFS with glib 2.32
     (Closes: #665584 I:"individual glib headers no longer supported")
+  * d-rules: get correct number of CPUs for parallel build on Linux
+    (Closes: #665862 W:"Build process not is paralleled on some Linux
+     architectures")
 
  -- Dmitry Smirnov <onlyjob@member.fsf.org>  Tue, 27 Mar 2012 21:57:45 +1100
 
